--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -4,6 +4,17 @@ server {
   client_max_body_size 10m;
   root /public/;
 
+  # CSSファイルの配信をnginxで行う
+  location /css/ {
+    root /public/;
+  }
+
+  # JavaScriptファイルの配信をnginxで行う
+  location /js/ {
+    root /public/;
+  }
+
+  # アプリケーションのプロキシ
   location / {
     proxy_set_header Host $host;
     proxy_pass http://app:8080;
